--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caos</title>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.css">
+
 </head>
 <body>
+    <h1>Colisión de Caos Cromático</h1>
     <canvas></canvas>
     <script type="module" src="scripts/index.js"></script>
 </body>
